[package]
name = "fn-item"
version = "0.1.1"
edition = "2024"
description = "Helpers for working with closures that don’t capture any variables."
repository = "https://github.com/SabrinaJewson/fn-item.rs"
license = "MIT"
keywords = ["ZST", "function", "FnItem", "FnStatic"]
categories = ["no-std::no-alloc"]
rust-version = "1.85.0"

[dependencies]
